<resources>
    <string name="app_name">UITest</string>

    <string name="btn_red">Update Red</string>
    <string name="btn_blue">Update Blue</string>
    <string name="btn_green">Update Green</string>

    <string name="view_textview_1">TextView 1</string>
    <string name="view_textview_2">TextView 2</string>
    <string name="view_textview_3">TextView 3</string>

    <string name="view_item_1">Item 1</string>
    <string name="view_item_2">Item 2</string>
    <string name="view_item_3">Item 3</string>
    <string name="view_item_4">Item 4</string>
    <string name="view_item_5">Item 5</string>

    <string name="view_fragment_1">Fragment One</string>
    <string name="view_fragment_2">Fragment Two</string>
    <string name="view_fragment_3">Fragment Three</string>
    <string name="view_fragment_4">Fragment Four</string>

</resources>
