<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.activity.MainActivity"
    android:orientation="vertical">

    <!-- Item 1 -->
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        >
        <LinearLayout
            android:id="@+id/wrapper_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/tv_header_1"
                android:text="Item 1"
                tools:text="Item 1"
                style="@style/HeaderItem"
                />
            <TextView
                android:id="@+id/tv_header_2"
                android:text="Item 2"
                tools:text="Item 2"
                style="@style/HeaderItem"
                />
            <TextView
                android:id="@+id/tv_header_3"
                android:text="Item 3"
                tools:text="Item 3"
                style="@style/HeaderItem"
                />
            <TextView
                android:id="@+id/tv_header_4"
                android:text="Item 4"
                tools:text="Item 4"
                style="@style/HeaderItem"
                />
            <TextView
                android:id="@+id/tv_header_5"
                android:text="Item 5"
                tools:text="Item 5"
                style="@style/HeaderItem"
                />
        </LinearLayout>
    </HorizontalScrollView>
    <include
        layout="@layout/view_line"
        />

    <!-- Item 2 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <RadioGroup
            android:id="@+id/pager_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/rBtn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/rBtn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RadioButton
                android:id="@+id/rBtn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RadioButton
                android:id="@+id/rBtn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RadioGroup>
    </FrameLayout>
    <include
        layout="@layout/view_line"
        />

    <!-- Item 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_textview_1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/view_textview_2"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/view_textview_3"
            />
    </LinearLayout>
    <include
        layout="@layout/view_line"
        />

    <!-- Item 4 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_item_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:text="Display Item"
            />
    </RelativeLayout>
    <include
        layout="@layout/view_line"
        />

    <!-- Item 5 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <Button
            android:id="@+id/btn_red"
            android:text="@string/btn_red"
            style="@style/FooterButton"
            />
        <Button
            android:id="@+id/btn_blue"
            android:text="@string/btn_blue"
            style="@style/FooterButton"
            />
        <Button
            android:id="@+id/btn_green"
            android:text="@string/btn_green"
            style="@style/FooterButton"
            />
    </LinearLayout>
</LinearLayout>
